--- a/helper-camelk/values.yaml
+++ b/helper-camelk/values.yaml
@@ -2,7 +2,7 @@ operators:
   camelk-operator:
     enabled: true
     namespace:
-      name: it-debezium-monit-app
+      name: test2
     subscription:
       channel: 1.10.x
       approval: Automatic
