--- a/helper-camelk/values.yaml
+++ b/helper-camelk/values.yaml
@@ -5,7 +5,7 @@ operators:
       name: test2
     subscription:
       channel: 1.10.x
-      approval: Automatic
+      approval: Manual
       operatorName: red-hat-camel-k
       source: redhat-operators
       sourceNamespace: openshift-marketplace
